[ CHANGELOG
	Project Name
		The Forgotten Server

	Version
		0.2.15

	Codenamed
		"Mystic Spirit"

	License
		GNU GPLv2

	Forum
		http://otland.net/
]

[ File changes
	D = Deleted.
	M = Modified.
	A = Added.

	M The Forgotten Server.exe
]

[ Milestone
	Fixed container bugs.
]